<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
     >
    <FrameLayout android:id="@+id/details"
        android:layout_width="match_parent" android:layout_height="match_parent"

        android:layout_above="@+id/bottom"
        />



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:id="@+id/bottom"
        android:layout_alignParentBottom="true"
        android:background="@color/netease_red"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/frag1"
            android:layout_gravity="center_vertical"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingTop="4dp"
            android:paddingBottom="4dp"
            >
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:id="@+id/img1"
                android:src="@color/netease_white"
                android:visibility="visible"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                />
            <TextView
                android:id="@+id/text1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/file_transfer"
                android:layout_gravity="center"
                android:gravity="center"
                android:textSize="18sp"
                android:layout_marginTop="10dp"
                android:textColor="@color/netease_gray"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/frag2"
            android:gravity="center"
            android:paddingTop="4dp"
            android:paddingBottom="4dp"
            android:layout_gravity="center_vertical"
            android:orientation="vertical"
            >
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:id="@+id/img2"
                android:src="@color/netease_white"
                android:visibility="gone"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                />
            <TextView
                android:id="@+id/text2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/send_record"
                android:layout_gravity="center"
                android:gravity="center"
                android:textSize="18sp"
                android:layout_marginTop="10dp"
                android:textColor="@color/netease_gray"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/frag3"
            android:gravity="center"
            android:paddingTop="4dp"
            android:paddingBottom="4dp"
            android:layout_gravity="center_vertical"
            android:orientation="vertical"
            >
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:id="@+id/img3"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:src="@color/netease_white"
                android:visibility="gone"
                />
            <TextView
                android:id="@+id/text3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/recv_record"
                android:layout_gravity="center"
                android:gravity="center"
                android:textSize="18sp"
                android:layout_marginTop="10dp"
                android:textColor="@color/netease_gray"
                />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>
